--- a/Documents/ITS/Bootstrap/startbootstrap-sb-admin-2-gh-pages/startbootstrap-sb-admin-2-gh-pages/cards.html
+++ b/Documents/ITS/Bootstrap/startbootstrap-sb-admin-2-gh-pages/startbootstrap-sb-admin-2-gh-pages/cards.html
@@ -63,7 +63,7 @@
                                                 </div>
                                             </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-cloud fa-2x text-gray-300"></i>
+                                            <i class="fas fa-eye-dropper fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
